--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "callback": "node src/callbacks/challenge.js"
+    "callback": "node src/callbacks/challenge.js",
+    "deploy": "gh-pages -d src"
   },
   "keywords": [
     "javascript"
@@ -15,5 +16,8 @@
     "node-fetch": "^3.3.1",
     "xmlhttprequest": "^1.8.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
