--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "callback": "node src/callbacks/challenge.js",
-    "deploy": "gh-pages -d src/landingPage"
+    "deploy": "gh-pages -d src"
   },
   "keywords": [
     "javascript"
